name:                   heroku-persistent
version:                0.0.0
author:                 Pat Brisbin <pbrisbin@gmail.com>
maintainer:             Pat Brisbin <pbrisbin@gmail.com>
license:                MIT
license-File:           LICENSE
-- synopsis:               Short description, appears in Hackage listings
-- description:            Long explanation, appears at top of project page
cabal-Version:          >= 1.10
build-Type:             Simple

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall
  exposed-modules:      Web.Heroku.Persist.Postgresql
  build-depends:        base >= 4 && < 5
                      , bytestring
                      , heroku >= 0.1.2 && < 0.2
                      , persistent-postgresql >= 1.0.0
                      , text >= 0.11 && < 2.0

test-suite spec
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       test
  ghc-options:          -Wall
  main-is:              Spec.hs
  build-depends:        base >= 4.7.0.0
                      , hspec
                      , heroku-persistent
                      , persistent-postgresql

source-repository head
  type:                 git
  location:             https://github.com/thoughtbot/heroku-persistent
